@@ -83,7 +83,15 @@ void __fastcall TfrmMain::FormCreate(TObject *Sender)
 	{
 		_tcscpy(gudtOptions.acTheme, clsUtil::GetIni(_T("Options"), _T("Theme"), _T("Windows")));
 	}
+
+	//Switch back to Windows theme if Windows 10 theme has been selected, because it causes issues with TaskDialogs in Windows 10 Anniversary
+	if (_tcscmp(gudtOptions.acTheme, _T("Windows10")) == 0)
+	{
+		_tcscpy(gudtOptions.acTheme, clsUtil::GetIni(_T("Options"), _T("Theme"), _T("Windows")));
+	}
+
 	//_tcscpy(gudtOptions.acVersion, clsUtil::GetIni(_T("Options"), _T("Version"), clsUtil::ExeVersion(Application->ExeName.c_str())));
+
 	_tcscpy(gudtOptions.acTempDirectory, clsUtil::GetIni(_T("Options"), _T("TempDirectory"), _T("")));
 	
 	GetModuleFileName(NULL, acPath, sizeof(acPath) - 1);
